CSS fix: Contrasting toggle button background in dark mode

--- a/frontend/node_configuration/style.scss
+++ b/frontend/node_configuration/style.scss
@@ -230,6 +230,16 @@ td:last-child{
         border-color: $primary;
     }
 
+    /* ApiTarget rule modal On/Off toggle */
+    .btn-check + .btn-dark {
+        background-color: #282d32;
+        border-color: #282d32;
+    }
+    .btn-check:active + .btn-dark, .btn-check:checked + .btn-dark {
+        background-color: #1B1E1F;
+        border-color: #1B1E1F;
+    }
+
     --#{$variable-prefix}body-color: #{$body-color};
     --#{$variable-prefix}body-bg: #{$body-bg};
 
